# CodigosPCL

./: README.md  links  ruta sabado
3DSC/: 3dsc.cpp  CMakeLists.txt
FPFH_OMP/: CMakeLists.txt  fpfh.cpp
PFH/: CMakeLists.txt  pfh.cpp
Plantilla/: shot.cpp
RIFT/: CMakeLists.txt  rift.cpp
SHOT/: shot.cpp
SHOTOMP/: correspondence_grouping.cpp
SPIN/: CMakeLists.txt  CMakeLists.txt~  spin.cpp
USC/: CMakeLists.txt  usc.cpp
